# opencl-kernel-profiler

./: Android.bp.example  CMakeLists.txt  README.md  layer.c
.github/workflows/: presubmit.yml
chromeos-utils/: opencl-kernel-profiler.sh
src/: opencl-kernel-profiler.cpp
tests/: CMakeLists.txt  gpu.cl  gpu.spv  gpu.spvasm  host.c  test.sh  trace-expectation-spv.txt  trace-expectation.txt
